# RBM

./: CMakeLists.txt  main.cpp
CudaNN/: CudaFunctions.cu  CudaFunctions.cuh  Matrix.cu  Matrix.cuh  NNCore.cu  NNCore.cuh  Vector.cu  Vector.cuh
DataRead/: readData.cpp  readData.h
RBM/: RBM.cpp  RBM.h
